[gd_scene load_steps=3 format=3 uid="uid://blpixln5eug03"]

[ext_resource type="Script" path="res://src/entities/obstacles/glue/glue_floor.gd" id="1_7ly7m"]
[ext_resource type="Texture2D" uid="uid://fpt4ef8hy1tw" path="res://assets/obstacles/glue.png" id="2_gyxy1"]

[node name="GlueFloor" type="Area2D"]
collision_layer = 0
collision_mask = 14
script = ExtResource("1_7ly7m")
metadata/_edit_group_ = true

[node name="GlueFloorStart" type="Sprite2D" parent="."]
texture = ExtResource("2_gyxy1")
offset = Vector2(4, -4)
region_enabled = true
region_rect = Rect2(0, 0, 8, 8)

[node name="GlueFloorMiddle" type="Sprite2D" parent="."]
position = Vector2(8, 0)
texture = ExtResource("2_gyxy1")
offset = Vector2(4, -4)
region_enabled = true
region_rect = Rect2(0, 8, 8, 8)

[node name="GlueFloorEnd" type="Sprite2D" parent="."]
position = Vector2(16, 0)
texture = ExtResource("2_gyxy1")
offset = Vector2(4, -4)
region_enabled = true
region_rect = Rect2(0, 16, 8, 8)

[node name="GlueSplashContainer" type="Node" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
